--- a/style.css
+++ b/style.css
@@ -58,14 +58,15 @@ a{
 }
 
 .perfil-capa h1{
-    padding-top: 20px;
+    
+    
     text-align: center;
 }
 
 .capa{
     display: flex;
     align-items: center;
-    width: 80%;
+    width: 77.5%;
     height: 300px;
    
     
@@ -86,20 +87,22 @@ a{
     justify-content: center;
     padding-left: 50px;
     height: 100%;
-    width: 20%;
+    width: 22.5%;
    
     
 }
 
     .perfil img{
-       width: 280px; 
-        height: 280px;
+        padding: 20px;
+       width: 180px; 
+        height: 180px;
         display: block;
         margin-left: auto;
         margin-right: auto;
         border-radius:50% ;
         max-width: 100%;
         max-height: 100%;
+        margin-top: 20px;
     }
 
    
@@ -108,7 +111,9 @@ a{
         margin-top: 10px;
         align-items: center;
         width: 25%;
-        border-right: 1px solid black;
+        border-right: 1px solid #d0d7de;
+        box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);;
+
       
       
     }
@@ -116,17 +121,21 @@ a{
     .container-Cen{
         width: 50%;
         margin: 20px;
-        border-right: 1px solid black;
+        border-right: 1px solid #d0d7de;
+        box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);;
+
     }
 
     .container-Dir{
         width: 25%;
+        box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);;
+
         
     }
 
     .feed{
         display: flex;
-        margin: 20px;
+        margin: 50px;
     }
 
     iframe{
